git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@18 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/HDL/VME64e_ActHDL/VME64xCore/compile.cfg
+++ b/HDL/VME64e_ActHDL/VME64xCore/compile.cfg
@@ -3,37 +3,82 @@ Entity=
 Architecture=
 TopLevelType=
 [file:.\src\compile.do]
-File Time Lo=1934454697
-File Time Hi=30065141
+File Time Lo=594028693
+File Time Hi=30070530
 Enabled=1
 State=Modified
 [file:.\..\..\VME64e_ActHDL_src\SharedComps.vhd]
-File Time Lo=649984398
-File Time Hi=30065141
+File Time Lo=-710240302
+File Time Hi=30071924
 Enabled=1
 State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\VME_bus.vhd]
-File Time Lo=-2142650858
-File Time Hi=30065744
+File Time Lo=284683160
+File Time Hi=30077558
 Enabled=1
 State=Compiled
 [file:.\src\VME_D08_test.tcl]
 State=Modified
-File Time Lo=-2045890397
-File Time Hi=30065734
+File Time Lo=-1938167069
+File Time Hi=30066487
 Enabled=1
 [file:.\src\VME_D16_test.tcl]
-File Time Lo=-1453129471
-File Time Hi=30065735
+File Time Lo=-148907505
+File Time Hi=30066137
 Enabled=1
 State=Modified
 [file:.\src\VME_D64_test.tcl]
-File Time Lo=411431569
-File Time Hi=30065737
+File Time Lo=173233061
+File Time Hi=30066138
 Enabled=1
 State=Modified
 [file:.\src\VME_unaligned_test.tcl]
-File Time Lo=614849880
-File Time Hi=30065740
+File Time Lo=671809937
+File Time Hi=30066138
 Enabled=1
 State=Modified
+[file:.\src\VME_CRCSR_test.tcl]
+File Time Lo=-1272663866
+File Time Hi=30066503
+Enabled=1
+State=Modified
+[file:.\..\..\VME64e_ActHDL_src\VME_pack.vhd]
+File Time Lo=-2074493802
+File Time Hi=30077157
+Enabled=1
+State=Compiled
+[file:.\src\VME_init_test.tcl]
+File Time Lo=1631506631
+File Time Hi=30067747
+Enabled=1
+State=Modified
+[file:.\src\VME_top_test.tcl]
+State=Modified
+File Time Lo=1956157623
+File Time Hi=30071958
+Enabled=1
+[file:.\..\..\VME64e_ActHDL_src\VME64xCore_Top.vhd]
+File Time Lo=-1069391231
+File Time Hi=30077585
+Enabled=1
+State=Modified
+[file:.\..\..\VME64e_ActHDL_src\WB_bus.vhd]
+File Time Lo=-1767308601
+File Time Hi=30077593
+Enabled=1
+State=Modified
+[file:.\..\..\VME64e_ActHDL_src\IRQ_controller.vhd]
+File Time Lo=-828597230
+File Time Hi=30077001
+Enabled=1
+State=Compiled
+[file:.\synthesis\vme64xcore_top.vhd]
+File Time Lo=2020889689
+File Time Hi=30071704
+Enabled=1
+State=Modified
+LIB=vme64xcore_post_synthesis
+SIM.POST.INCLUDED=1
+SIM.FUNC.INCLUDED=0
+SIM.POST.AUTO=1
+SIM.POST.INDEX=0
