git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@22 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/HDL/VME64e_ActHDL/VME64xCore/compile.cfg
+++ b/HDL/VME64e_ActHDL/VME64xCore/compile.cfg
@@ -13,8 +13,8 @@ File Time Hi=30071924
 Enabled=1
 State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\VME_bus.vhd]
-File Time Lo=284683160
-File Time Hi=30077558
+File Time Lo=1177296936
+File Time Hi=30078767
 Enabled=1
 State=Compiled
 [file:.\src\VME_D08_test.tcl]
@@ -43,8 +43,8 @@ File Time Hi=30066503
 Enabled=1
 State=Modified
 [file:.\..\..\VME64e_ActHDL_src\VME_pack.vhd]
-File Time Lo=-2074493802
-File Time Hi=30077157
+File Time Lo=1137797161
+File Time Hi=30078761
 Enabled=1
 State=Compiled
 [file:.\src\VME_init_test.tcl]
@@ -54,27 +54,27 @@ Enabled=1
 State=Modified
 [file:.\src\VME_top_test.tcl]
 State=Modified
-File Time Lo=1956157623
-File Time Hi=30071958
+File Time Lo=277660624
+File Time Hi=30078391
 Enabled=1
 [file:.\..\..\VME64e_ActHDL_src\VME64xCore_Top.vhd]
-File Time Lo=-1069391231
-File Time Hi=30077585
+File Time Lo=-1419907683
+File Time Hi=30078761
 Enabled=1
-State=Modified
+State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\WB_bus.vhd]
-File Time Lo=-1767308601
-File Time Hi=30077593
+File Time Lo=-1313887796
+File Time Hi=30078767
 Enabled=1
-State=Modified
+State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\IRQ_controller.vhd]
-File Time Lo=-828597230
-File Time Hi=30077001
+File Time Lo=868158066
+File Time Hi=30078760
 Enabled=1
 State=Compiled
 [file:.\synthesis\vme64xcore_top.vhd]
-File Time Lo=2020889689
-File Time Hi=30071704
+File Time Lo=-2137840593
+File Time Hi=30078795
 Enabled=1
 State=Modified
 LIB=vme64xcore_post_synthesis
@@ -82,3 +82,8 @@ SIM.POST.INCLUDED=1
 SIM.FUNC.INCLUDED=0
 SIM.POST.AUTO=1
 SIM.POST.INDEX=0
+[file:.\src\WB_pipelined_test.tcl]
+File Time Lo=-1320062172
+File Time Hi=30078367
+Enabled=1
+State=Modified
