git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@28 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/HDL/VME64e_ActHDL/VME64xCore/compile.cfg
+++ b/HDL/VME64e_ActHDL/VME64xCore/compile.cfg
@@ -8,13 +8,13 @@ File Time Hi=30070530
 Enabled=1
 State=Modified
 [file:.\..\..\VME64e_ActHDL_src\SharedComps.vhd]
-File Time Lo=-710240302
-File Time Hi=30071924
+File Time Lo=1253949050
+File Time Hi=30105514
 Enabled=1
 State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\VME_bus.vhd]
-File Time Lo=1177296936
-File Time Hi=30078767
+File Time Lo=-292270436
+File Time Hi=30103946
 Enabled=1
 State=Compiled
 [file:.\src\VME_D08_test.tcl]
@@ -54,27 +54,27 @@ Enabled=1
 State=Modified
 [file:.\src\VME_top_test.tcl]
 State=Modified
-File Time Lo=277660624
-File Time Hi=30078391
+File Time Lo=2105559998
+File Time Hi=30103714
 Enabled=1
 [file:.\..\..\VME64e_ActHDL_src\VME64xCore_Top.vhd]
-File Time Lo=-1419907683
-File Time Hi=30078761
+File Time Lo=2065676538
+File Time Hi=30084030
 Enabled=1
 State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\WB_bus.vhd]
-File Time Lo=-1313887796
-File Time Hi=30078767
+File Time Lo=-257193184
+File Time Hi=30088204
 Enabled=1
 State=Compiled
 [file:.\..\..\VME64e_ActHDL_src\IRQ_controller.vhd]
-File Time Lo=868158066
-File Time Hi=30078760
+File Time Lo=94756946
+File Time Hi=30088205
 Enabled=1
 State=Compiled
 [file:.\synthesis\vme64xcore_top.vhd]
-File Time Lo=-2137840593
-File Time Hi=30078795
+File Time Lo=-1070855559
+File Time Hi=30105514
 Enabled=1
 State=Modified
 LIB=vme64xcore_post_synthesis
@@ -85,5 +85,10 @@ SIM.POST.INDEX=0
 [file:.\src\WB_pipelined_test.tcl]
 File Time Lo=-1320062172
 File Time Hi=30078367
+Enabled=1
+State=Modified
+[file:.\src\FIFO_test.tcl]
+File Time Lo=190433966
+File Time Hi=30085389
 Enabled=1
 State=Modified
