datack_n and dtack_oe swapped
git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@57 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/HDL/ucf/SFpga.ucf
+++ b/HDL/ucf/SFpga.ucf
@@ -110,8 +110,8 @@ NET "VME_DATA_b[14]" LOC = G25;
 NET "VME_DATA_b[15]" LOC = G26;
 NET "VME_DS_n_i[0]" LOC = G20;
 NET "VME_DS_n_i[1]" LOC = H20;
-NET "VME_DTACK_n_o" LOC = J9;
-NET "VME_DTACK_OE_o" LOC = N25;
+NET "VME_DTACK_OE_o" LOC = J9;
+NET "VME_DTACK_n_o" LOC = N25;
 #NET "VmeGaP_in" LOC = J25;
 NET "VME_GA_i[5]" LOC = J25;
 
