git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@58 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/HDL/ucf/SFpga.ucf
+++ b/HDL/ucf/SFpga.ucf
@@ -31,7 +31,7 @@ NET "VME_WRITE_n_i" LOC = E20;
 
 
 NET "FpLed_onb8_5" LOC = U3;
-##NET "FpLed_onb8[6]" LOC = U4;
+NET "FpLed_onb8_6" LOC = U4;
 
 NET "VME_AS_n_i" LOC = M8;
 NET "VME_BERR_o" LOC = V18;
@@ -227,3 +227,17 @@ NET "VME_LWORD_n_b" IOSTANDARD = LVCMOS33;
 NET "VME_RST_n_i" IOSTANDARD = LVCMOS33;
 NET "VME_WRITE_n_i" IOSTANDARD = LVCMOS33;
 NET "clk_i" IOSTANDARD = LVCMOS33;
+
+# PlanAhead Generated IO constraints 
+
+NET "VME_IRQ_n_o[0]" IOSTANDARD = LVCMOS33;
+NET "VME_IRQ_n_o[1]" IOSTANDARD = LVCMOS33;
+NET "VME_IRQ_n_o[2]" IOSTANDARD = LVCMOS33;
+NET "VME_IRQ_n_o[3]" IOSTANDARD = LVCMOS33;
+NET "VME_IRQ_n_o[4]" IOSTANDARD = LVCMOS33;
+NET "VME_IRQ_n_o[5]" IOSTANDARD = LVCMOS33;
+NET "VME_IRQ_n_o[6]" IOSTANDARD = LVCMOS33;
+
+# PlanAhead Generated IO constraints 
+
+NET "FpLed_onb8_6" IOSTANDARD = LVCMOS33;
