--- a/HDL/ucf/SFpga.ucf
+++ b/HDL/ucf/SFpga.ucf
@@ -63,7 +63,6 @@ NET "VME_DATA_b[31]" LOC = W14;
 #NET "VmeSysClk_ik" LOC = L8;
 
 
-
 NET "VME_ADDR_b[1]" LOC = M24;
 NET "VME_ADDR_b[2]" LOC = M21;
 NET "VME_ADDR_b[3]" LOC = L21;
@@ -134,9 +133,7 @@ NET "clk_i" LOC = AF14;
 #NET "Si57x_ik" LOC = B12;
 #NET "Si57x_ikn" LOC = A12;
 
-
 # PlanAhead Generated IO constraints 
-
 NET "FpLed_onb8_5" IOSTANDARD = LVCMOS33;
 NET "VME_ADDR_DIR_o" IOSTANDARD = LVCMOS33;
 NET "VME_ADDR_OE_o" IOSTANDARD = LVCMOS33;
@@ -229,7 +226,6 @@ NET "VME_WRITE_n_i" IOSTANDARD = LVCMOS33;
 NET "clk_i" IOSTANDARD = LVCMOS33;
 
 # PlanAhead Generated IO constraints 
-
 NET "VME_IRQ_n_o[0]" IOSTANDARD = LVCMOS33;
 NET "VME_IRQ_n_o[1]" IOSTANDARD = LVCMOS33;
 NET "VME_IRQ_n_o[2]" IOSTANDARD = LVCMOS33;
@@ -239,5 +235,7 @@ NET "VME_IRQ_n_o[5]" IOSTANDARD = LVCMOS33;
 NET "VME_IRQ_n_o[6]" IOSTANDARD = LVCMOS33;
 
 # PlanAhead Generated IO constraints 
-
 NET "FpLed_onb8_6" IOSTANDARD = LVCMOS33;
+#Created by Constraints Editor (xc6slx150t-fgg676-3) - 2011/02/21
+NET "clk_i" TNM_NET = clk_i;
+TIMESPEC TS_clk_i = PERIOD "clk_i" 10 ns HIGH 50%;
