git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@97 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/HDL/ucf/SFpga.ucf
+++ b/HDL/ucf/SFpga.ucf
@@ -238,4 +238,4 @@ NET "VME_IRQ_n_o[6]" IOSTANDARD = LVCMOS33;
 NET "FpLed_onb8_6" IOSTANDARD = LVCMOS33;
 #Created by Constraints Editor (xc6slx150t-fgg676-3) - 2011/02/21
 NET "clk_i" TNM_NET = clk_i;
-TIMESPEC TS_clk_i = PERIOD "clk_i" 10 ns HIGH 50%;
+#TIMESPEC TS_clk_i = PERIOD "clk_i" 50 ns HIGH 50%;
