VFC testbench uploaded
git-svn-id: http://svn.ohwr.org/vme64x-core/trunk@174 665b4545-5c6b-4c24-801b-41150b02b44b

--- a/hdl/boards/vfc/SFpga.ucf
+++ b/hdl/boards/vfc/SFpga.ucf
@@ -241,7 +241,7 @@ NET "clk_i" LOC = B14;
 NET "clk_i" TNM_NET = "clk_i_group";
 #TIMESPEC TS_clk_i = PERIOD "clk_i" 50 ns HIGH 50%;
 #Created by Constraints Editor (xc6slx150t-fgg676-3) - 2011/06/30
-TIMESPEC "TS_clk_i" = PERIOD "clk_i_group" 50 ns HIGH 50%;
+TIMESPEC "TS_clk_i" = PERIOD "clk_i_group" 40 ns HIGH 50%;
 # Add by Davide for debug
 NET "leds[0]" LOC = P5;
 NET "leds[1]" LOC = R4;
@@ -252,5 +252,96 @@ NET "leds[5]" LOC = U3;
 NET "leds[6]" LOC = U4;
 NET "leds[7]" LOC = T4;
 
+#logic level:
+NET "VME_GA_i[0]" IOSTANDARD = LVCMOS33;
+NET "VME_GA_i[1]" IOSTANDARD = LVCMOS33;
+NET "VME_GA_i[2]" IOSTANDARD = LVCMOS33;
+NET "VME_GA_i[3]" IOSTANDARD = LVCMOS33;
+NET "VME_GA_i[4]" IOSTANDARD = LVCMOS33;
+NET "VME_GA_i[5]" IOSTANDARD = LVCMOS33;
+NET "VME_DS_n_i[0]" IOSTANDARD = LVCMOS33;
+NET "VME_DS_n_i[1]" IOSTANDARD = LVCMOS33;
+NET "VME_DTACK_n_o" IOSTANDARD = LVCMOS33;
+NET "VME_LWORD_n_b" IOSTANDARD = LVCMOS33;
+NET "VME_IACKIN_n_i" IOSTANDARD = LVCMOS33;
+NET "VME_IACKOUT_n_o" IOSTANDARD = LVCMOS33;
+NET "VME_IACK_n_i" IOSTANDARD = LVCMOS33;
+NET "VME_WRITE_n_i" IOSTANDARD = LVCMOS33;
+NET "VME_AS_n_i" IOSTANDARD = LVCMOS33;
+NET "VME_BERR_o" IOSTANDARD = LVCMOS33;
+NET "VME_RETRY_n_o" IOSTANDARD = LVCMOS33;
+NET "VME_RETRY_OE_o" IOSTANDARD = LVCMOS33;
+NET "VME_RST_n_i" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_DIR_o" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_OE_N_o" IOSTANDARD = LVCMOS33;
+NET "VME_AM_i[0]" IOSTANDARD = LVCMOS33;
+NET "VME_AM_i[1]" IOSTANDARD = LVCMOS33;
+NET "VME_AM_i[2]" IOSTANDARD = LVCMOS33;
+NET "VME_AM_i[3]" IOSTANDARD = LVCMOS33;
+NET "VME_AM_i[4]" IOSTANDARD = LVCMOS33;
+NET "VME_AM_i[5]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[1]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[2]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[3]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[4]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[5]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[6]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[7]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[8]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[9]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[10]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[11]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[12]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[13]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[14]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[15]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[16]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[17]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[18]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[19]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[20]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[21]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[22]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[23]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[24]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[25]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[26]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[27]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[28]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[29]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[30]" IOSTANDARD = LVCMOS33;
+NET "VME_ADDR_b[31]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[0]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[1]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[2]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[3]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[4]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[5]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[6]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[7]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[8]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[9]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[10]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[11]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[12]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[13]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[14]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[15]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[16]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[17]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[18]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[19]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[20]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[21]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[22]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[23]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[24]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[25]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[26]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[27]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[28]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[29]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[30]" IOSTANDARD = LVCMOS33;
+NET "VME_DATA_b[31]" IOSTANDARD = LVCMOS33;
 
 
