--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "hdl/ip_cores/general-cores"]
 	path = hdl/ip_cores/general-cores
-	url = https://ohwr.org/hdl-core-lib/general-cores.git
+    url = https://github.com/iljabek/general-cores.git
+	branch = WR-BTrain-VXS
